--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <h3>01</h3>
       </div>
       <section class="bold">
-        <a href="../../방재승/html/hmm/html/main.html" class="image"><img src="images/pic01.png" alt=""
+        <a href="./hmm/index.html" class="image"><img src="images/pic01.png" alt=""
             data-position="center center" /></a>
         <div class="content">
           <div class="inner">
@@ -140,7 +140,7 @@
         </div>
       </section>
       <section class="bold">
-        <a href="#" class="image"><img src="images/pic02.png" alt="" data-position="top center" /></a>
+        <a href="./디자인스페이스/html/main.html" class="image"><img src="images/pic02.png" alt="" data-position="top center" /></a>
         <div class="content">
           <div class="inner">
             <h2>DESIGNSPACE</h2>
