--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         </div>
       </section>
       <section class="bold">
-        <a href="./디자인스페이스/html/main.html" class="image"><img src="images/pic02.png" alt="" data-position="top center" /></a>
+        <a href="./디자인스페이스/index.html" class="image"><img src="images/pic02.png" alt="" data-position="top center" /></a>
         <div class="content">
           <div class="inner">
             <h2>DESIGNSPACE</h2>
